--- a/index.html
+++ b/index.html
@@ -5,15 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Momentum</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <form id="login-form">
+    <form class="hidden" id="login-form">
         <input required maxlength="15" type="text" placeholder="What is your name?" />
         <input type="submit" value="Log In" />
     </form>
-    <h1 id="greeting" class="hidden"></h1>
 
-    <script src="app.js"></script>
+    <h2 id="clock">00:00:00</h2>
+    
+    <h1 class="hidden" id="greeting"></h1>
+
+    <div id="quote">
+        <span></span>
+    </div>
+
+    <script src="/script/greeting.js"></script>
+    <script src="/script/clock.js"></script>
+    <script src="/script/quotes.js"></script>
 </body>
 </html>
