--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     
     <h1 class="hidden" id="greeting"></h1>
 
+    <form id="todo-form">
+        <input type="text" placeholder="Write a To Do and Press Enter" required />
+    </form>
+    <ul id="todo-list"></ul>
+
     <div id="quote">
         <span></span>
     </div>
@@ -24,5 +29,7 @@
     <script src="/script/greeting.js"></script>
     <script src="/script/clock.js"></script>
     <script src="/script/quotes.js"></script>
+    <script src="/script/background.js"></script>
+    <script src="/script/todo.js"></script>
 </body>
 </html>
