--- a/index.html
+++ b/index.html
@@ -26,10 +26,16 @@
         <span></span>
     </div>
 
+    <div id="weather">
+        <span></span>
+        <span></span>
+    </div>
+
     <script src="/script/greeting.js"></script>
     <script src="/script/clock.js"></script>
     <script src="/script/quotes.js"></script>
     <script src="/script/background.js"></script>
     <script src="/script/todo.js"></script>
+    <script src="/script/weather.js"></script>
 </body>
 </html>
