--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Momentum</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Playfair+Display&family=Song+Myung&display=swap" rel="stylesheet">
 </head>
 <body>
     <form class="hidden" id="login-form">
         <input required maxlength="15" type="text" placeholder="What is your name?" />
         <input type="submit" value="Log In" />
     </form>
+
+    <div id="weather">
+        <span></span>
+        <span></span>
+    </div>
 
     <h2 id="clock">00:00:00</h2>
     
@@ -23,11 +31,6 @@
     <ul id="todo-list"></ul>
 
     <div id="quote">
-        <span></span>
-    </div>
-
-    <div id="weather">
-        <span></span>
         <span></span>
     </div>
 
